Fixed overflow of cards in mobile, added autoprefixer

--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -153,6 +153,7 @@ header {
 .competitions {
 	background-color: $yellow;
 	color: lighten($darkgray, 5%);
+	overflow-x: hidden;
 
 	::selection {
 		background-color: $white;
